[package]
name = "sigchld"
version = "0.0.0"
authors = ["Jack O'Connor"]
description = "waiting for SIGCHLD from many threads at once"
repository = "https://github.com/oconnor663/sigchld.rs"
readme = "README.md"
documentation = "https://docs.rs/sigchld"
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2.172"
signal-hook = { version = "0.3.18", default-features = false }

[dev-dependencies]
anyhow = "1.0.98"
duct = "1.0.0"
